references about convexity + heuristic strategy

--- a/biblio.bib
+++ b/biblio.bib
@@ -93,6 +93,19 @@ pages="1015--1033"
 	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@Article{Llamazares2016,
+author="Llamazares, Bonifacio",
+title="Ranking Candidates Through Convex Sequences of Variable Weights",
+journal="Group Decision and Negotiation",
+year="2016",
+month="May",
+day="01",
+volume="25",
+number="3",
+pages="567--584"
+}
+
+
 @inproceedings{Lu2011,
   author    = {Tyler Lu and
                Craig Boutilier},
