--- a/draft.tex
+++ b/draft.tex
@@ -196,7 +196,7 @@ Without loss of generality, we consider that $w_1=1$ and $w_m=0$. \commentOC{I s
 The weights of a scoring rule can model different preferences of the chair. 
 For instance, the weights can control the inclination to favor ``extreme'' alternatives (often at either the top or the bottom of the input rankings) at the expenses of ``moderate'' alternatives (that are more consistently in the middle part of the input rankings).
 
-An important class of scoring rule is the one composed of weights that are a convex sequence, meaning that the difference between the weight of the first position and the weight of the second position is at least as great as the difference between the weights of the second and third positions, etc.
+An important class of scoring rule is the one composed of weights that are a convex sequence \cite{Stein1994,Llamazares2016}, meaning that the difference between the weight of the first position and the weight of the second position is at least as great as the difference between the weights of the second and third positions, etc.
 %\begin{align} \forall r \in \{1,\ldots,m-2\} \;\; & w_r - w_{r+1} \geq w_{r+1}-w_{r+2}  \\
 %\iff & w_r - 2 w_{r+1} + w_{r+2} \geq 0 \label{eq:convexity}
 %\end{align}
@@ -249,7 +249,7 @@ is the worst-case loss under all possible realizations of the full profile {\em 
 Max regret $\MR(x;\pprofile,W)$ is the worst-case loss of $x$. It is the loss occurred by an adversarial selection of a complete profile $\profile$ extending $\pprofile$ and a selection of $\w \in W$ to maximize the loss between $x$ and the true winner under $\profile$ and $\w$.
 \begin{align}
 \MR(x; \pprofile, W) & = \max_{y \in A} \PMR(x,y; \pprofile, W)\\
-& = \max_{\w \in W} \max_{\profile \in C(p)} \Regret(x, \profile, \w).
+& = \max_{\w \in W} \max_{\profile \in C(\profile)} \Regret(x, \profile, \w).
 \end{align}
 
 Finally,  $\MMR(\pprofile,W)$ is the value of minimax regret under $\pprofile$ and $W$, obtained when recommending a minimax optimal alternative $x^*_{\pprofile, W}$:
@@ -289,7 +289,7 @@ We consider now a procedure for completing a partial profile that was first prop
 As we will show, this procedure can also be used in our case of uncertain weight vector.
 %in the case of convex scoring rules we will be able to greatly simplify the problem by decoupling the two maximizations.
 
-We are interested in computing $PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
+We are interested in computing $\PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
 Consider our knowledge $\ppref_j$ of the preference of an agent $j$. The adversary has to make the score of $y$ as high as possible, and the score of $x$ as low as possible. To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worst than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \ppref_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \ppref_j y$). In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. This maximizes the adversary’s interests: because the weight vector is convex, the difference in scores will be lower when both alternatives are one rank lower (Equation \ref{eq:convexity}), and that difference of score is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
 To summarize:\commentOC{TODO only one number here} 
 \begin{align} 
@@ -365,7 +365,7 @@ Constraints are on the feasible parameters (the weights of the scoring rules); c
 Let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 \begin{prop}
 %Assume convex weights.
-The PMR can be written as:
+The $\PMR$ can be written as:
 \begin{align} 
 \PMR(x,y; \pprofile, W) =  
 \max_{w \in W} s(y; \hat{\profile}, \w) - s(y; \hat{\profile}, \w)\\
@@ -516,12 +516,17 @@ We consider different strategies to determine the next question to ask given the
 
 \begin{itemize}
 \item {\em Current solution strategy}: consider the solution of the minimax regret game, 
- $(x,y,\profile^{a},\w^{a})$, where $x$ is the minimax regret optimal alternative, $y$ the adversarial choice, $\w^{a}$ the weights, and $\profile^{a}$ the profile completed by the adversary.
-
-Ask a question to compare $x$ with $y$ to an agent.
-
-% Determine the part of ``regret'' due to uncertainty in $w$
+ $(x^{*},\bar{y},\bar{\profile},\bar{\w})$, where $x^{*}$ is the minimax regret optimal alternative,  $\bar{y} = \arg \max_{y \in A} \PMR(x,y; \pprofile, W)$; is the adversarial choice, and $\bar{\profile}$ and $\w$ are the instantiations\footnote{ $\bar{\profile} \!=\! \arg \max_{\profile \in C(\pprofile)} s(y; \profile, \bar{\w}) \!-\! s(x; \profile, \bar{\w})$; and $\bar{\w} \!=\! \arg \max_{w \in W} s(y; \pprofile, w) \!-\! s(x; \pprofile, w)$ .} of the weights associated with maximum regret.
+ % Determine the part of ``regret'' due to uncertainty in $w$
 % Determine the part of ``regret' due to uncertainty in $p$
+Define: 
+\begin{align}
+\tau_{1} & = \min_{\w \in W} s(\bar{x}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)  \label{eq:tau1} \\
+\tau_{2} & = \min_{\profile \in C(\pprofile)} s(\bar{x},\profile, \bar{\w}) -  s(x^{*}; \profile, \bar{\w}).
+\end{align}
+Intuitively the quantity $\MMR - \tau_{1} $ measures the contribution to regret of our uncertainty about the weights $\w$, while $\MMR - \tau_{2} $ measures the uncertainty about the profile.
+Therefore, whenever $\tau_{1} < \tau_{2}$ we ask a question to the chair, and compare $\bar{\w}$ and $\w_{\tau}$. the argmax of Eq. (\ref{eq:tau1}), componentwise to find the position $r$ that is most valuable to ask about.  
+Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, with the following heuristics.
  
  \item One possibility is to consider the MMR {\em a posteriori}. Assume that the different answers to a query induce the possible sets to be $(\pprofile_1,W_1)$ and $(\pprofile_2,W_2)$, then the score according to worst-case maximum regret is:
 \[\SCORE(x)= \max_{i=1,2} \MMR(\pprofile_i,W_i) \]
