--- a/draft.tex
+++ b/draft.tex
@@ -289,21 +289,27 @@ As we will show, this procedure can also be used in our case of uncertain weight
 %in the case of convex scoring rules we will be able to greatly simplify the problem by decoupling the two maximizations.
 
 We are interested in computing $\PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
-Consider our knowledge $\ppref_j$ of the preference of an agent $j$. The adversary has to make the score of $y$ as high as possible, and the score of $x$ as low as possible. To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worst than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \ppref_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \ppref_j y$). In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. This maximizes the adversary’s interests: because the weight vector is convex, the difference in scores will be lower when both alternatives are one rank lower (Equation \ref{eq:convexity}), and that difference of score is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
+Consider our knowledge $\ppref_j$ of the preference of an agent $j$. 
+The adversary has to make the score of $y$ as high as possible, and the score of $x$ as low as possible. 
+To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worst than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. 
+Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \ppref_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \ppref_j y$). 
+In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
+This maximizes the adversary’s interests: because the weight vector is convex, the difference in scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of score is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
 To summarize:\commentOC{TODO only one number here} 
 \begin{align} 
 \label{eq:compl}
 a \pref_j x &⇔ ¬(x \ppref_j a)\\
 y \pref_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \ppref_j y) ∨ (x \ppref_j a)).
 \end{align} 
-
 We just sketched a proof of the following claim, and leave the rest of the proof to the reader.
 \begin{claim}
-	There exists a completion ${\pref_j} \in C(\ppref_j)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} \max_{\profile \in C(\pprofile), {\pref_j} \in \profile} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that satisfies \ref{eq:compl}.
+There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
+%There exists a completion ${\pref_j} \in C(\ppref_j)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} \max_{\profile \in C(\pprofile), {\pref_j} \in \profile} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that satisfies 
 \end{claim}
-In this claim, we abuse notation by writing ${\pref_j} \in \profile$ to mean that the preference ordering corresponding to agent $j$ in $\profile$ is $\pref_j$.
+%In this claim, we abuse notation by writing ${\pref_j} \in \profile$ to mean that the preference ordering corresponding to agent $j$ in $\profile$ is $\pref_j$.
 It follows that the rank of $x$ for voter $j$ in $\PMR(x,y; \pprofile, W)$ is $1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $1+\card{{\pprefinv_j}(y)}+\alpha$, where $\alpha = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\alpha = 0$ otherwise.
 
+Let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 %Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
 
 %Let $U^+=\{ i \mid \ y \ppref_i x\}$ be the set of agents for which we know that $y$ is preferred to $x$ (positive contribution to pairwise regret), $U^-=\{ i \mid x \ppref_i y\}$ 
@@ -350,15 +356,6 @@ It follows that the rank of $x$ for voter $j$ in $\PMR(x,y; \pprofile, W)$ is $1
 %These two properties are intuitively understandable by observing that maximizing the PMR requires placing $x$ as low as possible, hence the first property; and $y$ as high as possible, hence the second property, with the exception that sometimes it is not possible to satisfy both goals and noting that the first goal is more important by convexity of the weights. 
 %A proof that this reasoning is correct is in \cref{sec:prfCompl}.
 
-The space of feasible weights $W$ is encoded with linear constraints that model the preferences of the chair.
-Therefore the pairwise maximum regret can be computed with a linear program.
-
-The minimax regret solution $\MMR(\pprofile, W)$ is determined by solving a sequence of pairwise max regret computations.
-Each PMR is computed using a linear program.
-The decision variables correspond to the weights attached to the different positions.
-Constraints are on the feasible parameters (the weights of the scoring rules); contraints represent the preferences of the chair about the scoring rule.
-
-Let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 \begin{claim}
 %Assume convex weights.
 The $\PMR$ can be written as:
@@ -372,6 +369,11 @@ where the coefficient $ (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x})$ is the nu
 %$\hat{\alpha}_{i}^{x} = \sum_{j=1}^{n}  I[\hat{v}_{j}(x)=i]$ where $I$ is the indicator function.
 \end{claim}
 %\[ \alpha_{i} = \sum_{j=1}^{n}  I[\hat{v}_{j}(y)=i] - I[\hat{v}_{j}(x)=i]\]
+We remind that the space of feasible weights $W$ is encoded with linear constraints $\Co_{W}$ that model the preferences of the chair.
+We now show that the pairwise maximum regret can be computed with a linear program.
+
+The PMR is computed using a linear program where the decision variables correspond to the weights attached to the different positions.
+Constraints are on the feasible parameters (the weights of the scoring rules); contraints represent the preferences of the chair about the scoring rule.
 The pairwise max regret $\PMR(x,y; \pprofile,W)$ is now obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$. 
 \begin{align*}
 \max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
@@ -379,7 +381,9 @@ The pairwise max regret $\PMR(x,y; \pprofile,W)$ is now obtained as the solution
 & \text{Equation } (\ref{eq:convexity})\\
 & \Co_W.
 \end{align*}
-Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables. We leave $w_{1}$ and $w_{m}$ in the linear program just for clarity of presentation.
+Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables (we leave $w_{1}$ and $w_{m}$ in the linear program just for clarity of presentation).
+
+Finally the minimax regret solution $\MMR(\pprofile, W)$ is determined by solving a sequence of pairwise max regret computations, solving the above linear program for every different pair $(x,y) \in A^{2}$.
 
 \section{Interactive Elicitation} 
 \label{sec:elicit}
@@ -393,6 +397,8 @@ The remainder of this Section is structured as follows.
 First of all, we discuss the different types of questions that can be asked to the agents and to the chair, and the way responses are handled.
 Then, we describe different strategies to determine informative queries to ask next, with the goal of reducing $\MMR(\pprofile,W)$ quickly.
 
+%Type of questions that we can ask to the chair:	bound queries (Is this alternative among your top-k most preferred items?), comparison queries (do you prefer alternative x or alternative y?).
+% we discuss the different forms of queries and develop several query strategies 
 \paragraph{Question types}
 We distinguish between questions asked to the agents and questions asked to the chair.
 As {\em questions asked to the agents}, it is natural to consider comparison queries asking to compare two alternatives.
@@ -493,15 +499,9 @@ Indeed, it can be beneficial to interleave questions asked to the chair and ques
 
 Answers given by the chair about the scoring rule refine our knowledge of the weights $w_1,\ldots,w_n$, while
 answers given by one of the agents refine our knowledge about the agents preferences.
-
 At each step we need to decide whether we want to ask a question to the chair or to one of the agents (and to which agent in particular). We assume that we can ask comparison queries to the agents and questions comparing the differences of weights to the chair. 
 
 In the experiments we want to compare the interleaved approach with a baseline challenger, a method  that elicits the preferences of the agents first and then the voting rule (or the other way around)
-
-%Type of questions that we can ask to the chair:	bound queries (Is this alternative among your top-k most preferred items?), comparison queries (do you prefer alternative x or alternative y?).
-
-% we discuss the different forms of queries and develop several query strategies 
-%\paragraph{Query methods}
 We consider different strategies to determine the next question to ask given the current information.
 
 %\begin{itemize}
@@ -524,7 +524,6 @@ Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, with th
  One possibility is to consider the MMR {\em a posteriori}. Assume that the different answers to a query induce the possible sets to be $(\pprofile_1,W_1)$ and $(\pprofile_2,W_2)$, then the score according to worst-case maximum regret is:
 \[\SCORE(x)= \max_{i=1,2} \MMR(\pprofile_i,W_i) \]
 In this case, the query with least value is chosen.
-
 What is the complexity of this strategy? Let's define $Q$ as the set of all possible queries we can address to the agents and to the chair. The worst case is represented by the situation in which we do not have any information about both the agents' preferences and the weights constraints. In this case we can address $\binom{m}{2}=\frac{m(m-1)}{2}$ questions to each agent. Moreover, we need to ask at least $m$ questions to the chair. Then, each question induces two possible pairs of $(\pprofile,W)$ for each of which we compute the $\MMR$, whose worst case complexity is $O(nm^3)$. Thus, the cardinality of $Q$ in the worst case is $\approx n \cdot \frac{m(m-1)}{2} + \lambda m$, and the worst case time complexity of the strategy is $O(n^2m^5)$.
 
 \medskip \noindent
