--- a/draft.tex
+++ b/draft.tex
@@ -1,10 +1,11 @@
 \newif\ifappendix
 %\appendixtrue %COMMENT to remove appendix % UNCOMMENT to add apendix
 \input{ijcai_preamble} 
-\author{Beatrice Napolitano$^1$\and Olivier Cailloux$^1$	\and  Paolo Viappiani$^{2}$
-	\affiliations $^1$ LAMSADE, UMR 7243, CNRS and Universit\'e Paris Dauphine, PSL Research University, Paris, France\\ $^2$ LIP6, UMR 7606, CNRS and Sorbonne Universit\'e, Paris, France
-	\emails \{firstname.lastname\}@dauphine.fr, paolo.viappiani@lip6.fr
-}
+\author{ID: 2696}
+%\author{Beatrice Napolitano$^1$\and Olivier Cailloux$^1$	\and  Paolo Viappiani$^{2}$
+%	\affiliations $^1$ LAMSADE, UMR 7243, CNRS and Universit\'e Paris Dauphine, PSL Research University, Paris, France\\ $^2$ LIP6, UMR 7606, CNRS and Sorbonne Universit\'e, Paris, France
+%	\emails \{firstname.lastname\}@dauphine.fr, paolo.viappiani@lip6.fr
+%}
 %Restoring page numbers as missing them out violates basic human rights of the reviewers. -- Olivier
 \thispagestyle{plain}
 \pagestyle{plain}
