several small fixes

--- a/biblio.bib
+++ b/biblio.bib
@@ -9,6 +9,13 @@
 	year = "2006"
 }
 
+@PhDThesis{Braziunas2011,
+  author = 	 {Darius Braziunas},
+  title = 	 {Decision-theoretic elicitation of generalized additive utilities},
+  school =       {University of Toronto},
+  year = 	 {2011}
+}
+
 @inproceedings{Cailloux2014,
 	author    = {Olivier Cailloux and
 	Ulle Endriss},
