--- a/draft.tex
+++ b/draft.tex
@@ -108,7 +108,7 @@
 \maketitle
 \begin{abstract}
 Social choice deals with the problem of determining a consensus choice from the preferences of different agents (voters).
-In the classical setting, the voting rule is fixed beforehand and full preference information is provided.% by the voters. 
+In the classical setting, the voting rule is fixed beforehand and full preference information is provided.
 Recently, the assumption of full preference information has been questioned by a number of researchers and several methods for eliciting preferences have been proposed.
 
 In this paper we go one step further and we assume that both the voting rule and the agents preferences are partially specified.
@@ -163,7 +163,7 @@ A profile is equivalently represented by $\profile=(v_1,\ldots,v_n)$ where $v_j(
 
 Let $V$ be the set of possible preference profiles (the union for any integer $n$ of the $n$-fold cartesian product of the linear orders over the alternatives).
 A social choice function $f : V \rightarrow \powersetz{A}$ associates a profile with a set of winners, where $\powersetz{A}$ represents the set of subsets of $A$ except for the emptyset. (Sets are used for tied winners.)
-Among the many possible social choice functions, we consider {\em positional scoring rules}, which attach weights to positions according to  the vector $(w_1, \ldots, w_m)$ (also called the scoring vector).
+Among the many possible social choice functions, we consider {\em positional scoring rules (PSR)}, which attach weights to positions according to  the vector $(w_1, \ldots, w_m)$ (also called the scoring vector).
 %A scoring rule associates each alternative to a score that is given by the sum of points obtained for each voter.
 An alternative obtains a score that depends on the rank obtained in each of the preference orders:
 \begin{align}
@@ -263,7 +263,7 @@ By picking as consensus choice
  an alternative associated with minimax regret, we can provide a recommendation that gives worst-case guarantees, giving some robustness in face of uncertainty (due to both not knowing the agents' preferences and the weights used in the aggregation). 
 In cases of ties in minimax regret, we can either decide to return all minimax alternatives $A^*_{\pprofile, W}$ as winners or to pick just one of them using some tie-breaking strategy.
 
-Notice that if $\MMR(\pprofile, W)=0$, then $x^{*}_{\pprofile,W}$  is a necessary co-winner; this means that for any valid completition of the profile and any feasible weight $w \in W$, $x^{*}_{\pprofile,W}$ obtains a highest score.
+Notice that if $\MMR(\pprofile, W)\!=\!0$, then $x^{*}_{\pprofile,W}$  is a necessary co-winner; this means that for any valid completion of the profile and any feasible $w \!\in\! W$, $x^{*}_{\pprofile,W}$ obtains a highest score.
 
 We note that our notion of regret gives some cardinal meaning to the scores: instead of just being used to select winners under the corresponding PSR, their differences are considered as representing the regret of the chair.
 
@@ -294,7 +294,7 @@ As we will show, this procedure can also be used in our case of uncertain weight
 We are interested in computing $\PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
 Consider our knowledge $\ppref_j$ of the preference of an agent $j$. 
 The adversary has to make the score of $y$ as high as possible, and the score of $x$ as low as possible. 
-To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worst than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. 
+To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worse than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. 
 Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \ppref_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \ppref_j y$). 
 In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
 This maximizes the adversary’s interests: because the weight vector is convex, the difference in scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of score is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
@@ -306,15 +306,16 @@ a \pref_j x &⇔ ¬(x \ppref_j a)\\
 y \pref_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \ppref_j y) ∨ (x \ppref_j a)).
 \end{split}
 \end{align} 
+In what follows let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 We just sketched a proof of the following claim, and leave the rest of the proof to the reader.
 \begin{claim}
 There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
 %There exists a completion ${\pref_j} \in C(\ppref_j)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} \max_{\profile \in C(\pprofile), {\pref_j} \in \profile} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that satisfies 
 \end{claim}
 %In this claim, we abuse notation by writing ${\pref_j} \in \profile$ to mean that the preference ordering corresponding to agent $j$ in $\profile$ is $\pref_j$.
-It follows that the rank of $x$ for voter $j$ in $\PMR(x,y; \pprofile, W)$ is $1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $1+\card{{\pprefinv_j}(y)}+\alpha$, where $\alpha = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\alpha = 0$ otherwise.
+\noindent It follows that $\hat{v}_{j}(x)$, the rank of $x$ for voter $j$ in the PMR-maximizing linear order $\bar{v}_{j}$ %$\PMR(x,y; \pprofile, W)$ 
+is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $\hat{v}_{j}(x)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\alpha = 0$ otherwise.
 
-Let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 %Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
 
 %Let $U^+=\{ i \mid \ y \ppref_i x\}$ be the set of agents for which we know that $y$ is preferred to $x$ (positive contribution to pairwise regret), $U^-=\{ i \mid x \ppref_i y\}$ 
@@ -369,15 +370,15 @@ The $\PMR$ can be written as:
 & = \max_{w \in W} \sum_{j=1}^n w_{\hat{v}_j(y)} - w_{\hat{v}_j(x)} = \\ 
 & = \max_{w \in W} \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_i. 
 \end{align}
-where the coefficient $ (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x})$ is the number of times $y$ is at rank $r$ minus the number of times $x$ is at rank $r$ in the rankings of the completed profile $\hat{\profile}$.
+where the $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number of times $y$ (resp. $x$) is at rank $r$ in the rankings of the completed profile $\hat{\profile}$.
 %$\hat{\alpha}_{i}^{x} = \sum_{j=1}^{n}  I[\hat{v}_{j}(x)=i]$ where $I$ is the indicator function.
 \end{claim}
 %\[ \alpha_{i} = \sum_{j=1}^{n}  I[\hat{v}_{j}(y)=i] - I[\hat{v}_{j}(x)=i]\]
-We remind that the space of feasible weights $W$ is encoded with linear constraints $\Co_{W}$ that model the preferences of the chair.
-We now show that the pairwise maximum regret can be computed with a linear program.
-
-The PMR is computed using a linear program where the decision variables correspond to the weights attached to the different positions.
-Constraints are on the feasible parameters (the weights of the scoring rules); contraints represent the preferences of the chair about the scoring rule.
+%We now show that the pairwise maximum regret can be computed with a linear program.
+The PMR can be now computed by optimizing a linear program (LP) where the decision variables correspond to the weights attached to the different positions.
+Constraints are on the feasible parameters (the weights of the scoring rules).
+We remind that the preferences of the char are encoded with linear constraints $\Co_{W}$.
+% contraints represent the preferences $\Co_{W}$ of the chair about the scoring rule.
 The pairwise max regret $\PMR(x,y; \pprofile,W)$ is now obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$. 
 \begin{align*}
 \max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
@@ -385,9 +386,15 @@ The pairwise max regret $\PMR(x,y; \pprofile,W)$ is now obtained as the solution
 & \text{Equation } (\ref{eq:convexity})\\
 & \Co_W.
 \end{align*}
-Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables (we leave $w_{1}$ and $w_{m}$ in the linear program just for clarity of presentation).
+Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
+(we leave $w_{1}$ and $w_{m}$ in the LP just for clarity of presentation).
 
-Finally the minimax regret solution $\MMR(\pprofile, W)$ is determined by solving a sequence of pairwise max regret computations, solving the above linear program for every different pair $(x,y) \in A^{2}$.
+%Finally the minimax regret solution $\MMR(\pprofile, W)$ is determined by solving a sequence of pairwise max regret computations, solving the above linear program for every different pair $(x,y) \in A^{2}$.
+The max regret $\MR(x; \pprofile, W)$ is determined by considering the pairwise regret of $x$ with each other alternative in $A$.
+The optimal alternative w.r.t. minimax regret is the one with least max regret. 
+Notice that, whenever the PMR of an alternative $x$ (against some other alternative) exceeds the best MR value found so far, we don't need to further evaluate $x$. 
+This idea can be exploited further by adopting a minimax-search tree (see \cite{Braziunas2011}).
+%The computation can be made faster by adopting an efficient scheme of evaluation of PMR where .
 
 \section{Interactive Elicitation} 
 \label{sec:elicit}
@@ -405,24 +412,31 @@ Then, we describe different strategies to determine informative queries to ask n
 % we discuss the different forms of queries and develop several query strategies 
 \paragraph{Question types}
 We distinguish between questions asked to the agents and questions asked to the chair.
-As {\em questions asked to the agents}, it is natural to consider comparison queries asking to compare two alternatives.
+As {\em questions asked to the agents} it is natural to consider comparison queries asking to compare two alternatives.
 %Another common type of queries are {\em top-k}, asking to each voter her $k$ most preferred alternatives.
-The effect of a response to a question asked to a voter is to augment our knowledge about the agents rankings, thus augmenting the partial profile $\pprofile$. 
+The effect of a response to a question asked to an agent is to increase our knowledge about the agents rankings, thus augmenting the partial profile $\pprofile$. 
 If voter $j$ answers a comparison query stating that alternative $a$ is preferred to $b$, then the partial order $\ppref_j$ is augmented with $a \ppref_j b$ and by transitive closure.
 
 A bit more discussion is needed about {\em questions asked to the chair}.
-Such a question aims at refining our knowledge about the scoring rule;
-a response gives us a constraint on the weight vector $\w$.
+Such questions aim at refining our knowledge about the scoring rule; a response gives us a constraint on the weight vector $\w$.
 In particular, we want to acquire constraints of the type:
 \[ w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2}) \] 
 for $r \in \{1,\ldots,m-2\}$, relating the difference between the importance of ranks $r$ and $r+1$ with the difference between ranks $r+1$ and $r+2$.
 
 \paragraph{Building concrete questions for the chair}
-As we assume the weights constitute the utility components of the chair, it might be reasonable to assume, as we do here, that the chair is able to answer such abstract questions in our setting. However, it is important to make sure that the question can also, in principle, be asked in a more concrete way, in terms of winners of example profiles. This permits to test whether the chair understands the question as we do; this permits to relate the preference of the chair as we understand it to her choice behavior in the economic sense; and this will be necessary for an ordinal extension of our work where the scores would not be considered as cardinal utilities.
+As we assume the weights constitute the utility components of the chair, it might be reasonable to assume, 
+%as we do here, 
+that the chair is able to answer such abstract questions in our setting. However, it is important to make sure that the question can also, in principle, be asked in a more concrete way, in terms of winners of example profiles. This permits to test whether the chair understands the question as we do; this permits to relate the preference of the chair  to her choice behavior in the economic sense; and this will be necessary for an ordinal extension of our work where the scores would not be considered as cardinal utilities.
 Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a way that the set of (tied) winners picked by the chair reveals whether $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$.
 We assume that $\lambda$ is rational, and define $\lambda = p/q$.
 
-Observe that the question may be defined equivalently as whether $q w_{r} + p w_{r+2} ≥ (p + q) w_{r+1}$, where $p, q$ are natural numbers. As a first attempt to make this question concrete, let us define a profile $P$ containing $p+q$ agents. Define an alternative $a$ that receives $q$ times the rank $r$ and $p$ times the rank $r+2$ and an alternative $b$ that receives $p+q$ times the rank $r+1$. Observing that the score of $a$ in that profile is exactly the left hand side of the question, and that the score of $b$ is the right hand side, intuition suggests that observing whether the chair picks $a$ or $b$ as winner will let us determine which side is greater; equality occurring when the chair declares $a$ and $b$ as tied for the victory. However, we still need to complete the profile, thus, come up with other $m-2$ alternatives defined so that each voter in the resulting profile has given each rank once. And we must ensure, doing this, that these other alternatives are not better than $a$ or $b$. For if the chair picks a different alternative $c$, it only tells us that the chair prefers $c$ to both $a$ and $b$, but it generally does not answer the question we are interested in. Taking $p = q = 1$, $m=4$, $r=2$, we see that such a completion may be impossible. Luckily, this problem can be worked around, at the price of increasing the number of agents. 
+Observe that the question may be defined equivalently as whether $q w_{r} + p w_{r+2} ≥ (p + q) w_{r+1}$, where $p, q$ are natural numbers. 
+As a first attempt to make this question concrete, let us define a profile $P$ containing $p+q$ agents. 
+Define an alternative $a$ that receives $q$ times the rank $r$ and $p$ times the rank $r+2$ and an alternative $b$ that receives $p+q$ times the rank $r+1$. 
+Observing that the score of $a$ in that profile is exactly the left hand side of the question, and that the score of $b$ is the right hand side, intuition suggests that observing whether the chair picks $a$ or $b$ as winner will let us determine which side is greater; equality occurring when the chair declares $a$ and $b$ as tied for the victory. 
+However, we still need to complete the profile, thus, come up with other $m-2$ alternatives defined so that each agent in the resulting profile has placed exactly one alternative in each rank. 
+And we must ensure, doing this, that these other alternatives are not better than $a$ or $b$.\footnote{Because, if the chair picks a different alternative $c$, it only tells us that the chair prefers $c$ to both $a$ and $b$, but it generally does not answer the question we are interested in.} 
+Taking $p = q = 1$, $m=4$, $r=2$, we see that such a completion may be impossible. Luckily, this problem can be worked around, at the price of increasing the number of agents. 
 
 First build a temporary profile $P$ of $p+q$ agents with $a$ and $b$ ranked as just described. Complete it with $m-2$ alternatives ranked in arbitrary orders so that the resulting profile has complete strict rankings for each of the $p+q$ voter. Now we will make the other alternatives as bad as desired by adding agents to $P$ that appreciate $a$ and $b$ more than the other alternatives, thus building a profile $P'$ in which, whatever the weights, $c$ may not have a better score than $a$. Observe that if we add $\delta$ agents (with $\delta$ a natural number) that put $a$ at first rank and $b$ at second rank, and $\delta$ agents that put $b$ at first rank and $a$ at second rank, we do not change the difference of the scores of $a$ and $b$, and thus, observing the chair choosing $a$ or $b$ still answers the question. Choose arbitrarily a matching of the remaining $m-2$ alternatives to the ranks $3$ to $m$, say, $c \mapsto 3$, $d \mapsto 4$, and so on. The first $\delta$ supplementary agents, who rank $a$ first and $b$ second, rank the other alternatives as the just defined mapping suggests. The other $\delta$ supplementary agents, who rank $b$ first and $a$ second, use the opposite ranking for the remaining alternatives, say, $c \mapsto m$, $d \mapsto m-1$, and so on. We can now prove that, for $\delta = p+q$, and whatever the weight vector $w \in \W$, no alternative, except possibly $b$, has a better score than $a$. (In fact, as the construction will exhibit, they are all worst than both $a$ and $b$, but the weaker fact is enough for our claim.)
 
@@ -496,14 +510,17 @@ d& 1& 2& 4& 6 \\
 \paragraph{Elicitation strategies}
 
 We develop some elicitation strategies for simultaneous elicitation of agents' preferences and of the scoring rule.
-Starting from some initial partial knowledge, our goal is to learn both the scoring rule function and the agents' preferences.
+Starting from some initial partial knowledge, our goal is to acquire the relevant preference information 
+%(about both the scoring rule function and the agents' preferences) 
+in order to determine an approximate winner.
 While it is of course possible doing full elicitation of the weights and afterwards elicit the agents' preferences (or the other way around) we propose an interleaved approach.
 In our interactive  protocol for simultaneously eliciting the preferences of the chair about the voting rule and the agents' preferences about the alternatives.
 Indeed, it can be beneficial to interleave questions asked to the chair and questions asked to agents, depending on which is estimated to be more informative.
 
 Answers given by the chair about the scoring rule refine our knowledge of the weights $w_1,\ldots,w_n$, while
 answers given by one of the agents refine our knowledge about the agents preferences.
-At each step we need to decide whether we want to ask a question to the chair or to one of the agents (and to which agent in particular). We assume that we can ask comparison queries to the agents and questions comparing the differences of weights to the chair. 
+At each step we need to decide whether we want to ask a question to the chair or to one of the agents (and to which agent in particular). 
+%We ask comparison queries to the agents and questions comparing the differences of weights to the chair. 
 
 In the experiments we want to compare the interleaved approach with a baseline challenger, a method  that elicits the preferences of the agents first and then the voting rule (or the other way around)
 We consider different strategies to determine the next question to ask given the current information.
@@ -522,13 +539,15 @@ Define:
 \end{align}
 Intuitively the quantity $\MMR - \tau_{1} $ measures the contribution to regret of our uncertainty about the weights $\w$, while $\MMR - \tau_{2} $ measures the uncertainty about the profile.
 Therefore, whenever $\tau_{1} < \tau_{2}$ we ask a question to the chair, and compare $\bar{\w}$ and $\w_{\tau}$. the argmax of Eq. (\ref{eq:tau1}), componentwise to find the position $r$ that is most valuable to ask about.  
-Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, with the following heuristics.
+Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, with the following heuristics: COMPLETE
  
  %\item 
  One possibility is to consider the MMR {\em a posteriori}. Assume that the different answers to a query induce the possible sets to be $(\pprofile_1,W_1)$ and $(\pprofile_2,W_2)$, then the score according to worst-case maximum regret is:
 \[\SCORE(x)= \max_{i=1,2} \MMR(\pprofile_i,W_i) \]
 In this case, the query with least value is chosen.
-What is the complexity of this strategy? Let's define $Q$ as the set of all possible queries we can address to the agents and to the chair. The worst case is represented by the situation in which we do not have any information about both the agents' preferences and the weights constraints. In this case we can address $\binom{m}{2}=\frac{m(m-1)}{2}$ questions to each agent. Moreover, we need to ask at least $m$ questions to the chair. Then, each question induces two possible pairs of $(\pprofile,W)$ for each of which we compute the $\MMR$, whose worst case complexity is $O(nm^3)$. Thus, the cardinality of $Q$ in the worst case is $\approx n \cdot \frac{m(m-1)}{2} + \lambda m$, and the worst case time complexity of the strategy is $O(n^2m^5)$.
+What is the complexity of this strategy? Let's define $Q$ as the set of all possible queries we can address to the agents and to the chair. The worst case is represented by the situation of complete ignorance.
+%in which we do not have any information about both the agents' preferences and the weights constraints. 
+In this case we can address $\binom{m}{2}=\frac{m(m-1)}{2}$ questions to each agent. Moreover, we need to ask at least $m$ questions to the chair. Then, each question induces two possible pairs of $(\pprofile,W)$ for each of which we compute the $\MMR$, whose worst case complexity is $O(nm^3)$. Thus, the cardinality of $Q$ in the worst case is $\approx n \cdot \frac{m(m-1)}{2} + \lambda m$, and the worst case time complexity of the strategy is $O(n^2m^5)$.
 
 \medskip \noindent
 {\em Two phase method.}
@@ -583,19 +602,18 @@ We experimented with both settings that assume a convex sequences of weights, an
 %Comparison between our interleaved strategy and a strategy, still based on minimax regret  but that is not interleaved; also compare to some heuristic baselines.
 
 \section{Conclusions}  \label{sec:conclusions}
-
-% integrated preference elicitation methodology
 In this paper we have considered a  social choice setting with partial  information about the voter's  
 preferences and as well a partially specified voting rule.
 We have proposed the use of minimax regret as a means of robust winner determination in this setting, and as well as to guide the process of simultaneous elicitation of preferences and voting rule.
-Our experimental results on randomly generated and real world data sets show that regret-based elicitation is effective and allow to find a near-optimal consensus choice in a limited number of steps.
-%The detection of optimal or near-optimal product recommendation is generally possible with little concept and utility information
+Our experimental results %on randomly generated and real world data sets 
+show that regret-based elicitation is effective and allow to quickly find a near-optimal consensus choice.
 %Regret-based elicitation allows to determine near-optimal winners using only few information about the agents' preferences.
+
 We mention some  important directions for future works.
 First of all, further development of elicitation strategies, considering alternative heuristics, is an important direction. 
 Second, we are interested in extending elicitation of voting rules going beyond scoring rules.
 A third direction is that of considering probabilistic methods for elicitation.
-Finally, we are interested in studying the effect of strategic agents, that may not report their true preferences.
+Finally, we are interested in studying the effect of strategic agents. %that may not report their true preferences.
 % distribution-free heuristics
 
 % Acknowledgements: We thank the reviewers for comments helping to improve the paper. 
